// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add collapse div  Should add div collpase to html with: <blockquote> 1`] = `"<head></head><body><div><div class=\\"cptx-div-collapse cptx-div-expanded\\" id=\\"cptx-div-collapse-1\\"><i class=\\"icon-dots\\"></i></div><blockquote style=\\"display: block;\\" id=\\"blockquote-1\\"><p></p><br><blockquote></blockquote></blockquote></div></body>"`;

exports[`Add collapse div  Should add div collpase to html with: <div class="criptext_quote"> 1`] = `"<head></head><body><div class=\\"cptx-div-collapse cptx-div-expanded\\" id=\\"cptx-div-collapse-1\\"><i class=\\"icon-dots\\"></i></div><div class=\\"criptext_quote\\" style=\\"display: block;\\" id=\\"blockquote-1\\"><blockquote><p></p><br><blockquote></blockquote></blockquote></div></body>"`;

exports[`Add collapse div  Should add div collpase to html with: <div class="gmail_quote"> 1`] = `"<head></head><body><div class=\\"gmail_quote\\"><div class=\\"cptx-div-collapse cptx-div-expanded\\" id=\\"cptx-div-collapse-1\\"><i class=\\"icon-dots\\"></i></div><blockquote style=\\"display: block;\\" id=\\"blockquote-1\\"><p></p><br><blockquote></blockquote></blockquote></div></body>"`;

exports[`Form recipients Should form recipients 1`] = `
Object {
  "bcc": Array [
    "test4@criptext.com",
  ],
  "cc": Array [
    "Name<>1 <test1@criptext.com>",
    "<error@criptext.com> <test2@criptext.com>",
    "error2@criptext.com <test3@criptext.com>",
  ],
  "from": Array [
    "Name Surname <test5@criptext.com>",
  ],
  "to": Array [
    "test@criptext.com",
  ],
}
`;

exports[`Form recipients Should form recipients 2`] = `
Object {
  "bcc": Array [
    "test4@criptext.com",
  ],
  "cc": Array [
    "Name<>1 <test1@criptext.com>",
    "<error@criptext.com> <test2@criptext.com>",
    "error2@criptext.com <test3@criptext.com>",
  ],
  "from": Array [
    "Name Surname <test5@criptext.com>",
  ],
  "to": Array [
    "<test@criptext.com>",
  ],
}
`;
